Implement send speech for item and mobile