@@ -221,8 +221,11 @@ public class GameController extends AbstractProtocolController implements ModelO
 					false, false));
 		} else {
 			Item item = core.findItemByID(doubleClick.getObjectSerialId());
-			return itemManager.use(item);
+			if (item != null) {
+				return itemManager.use(item);
+			}
 		}
+		return Collections.emptyList();
 	}
 	
 	public List<Message> handle(GeneralInformation info) {
@@ -231,7 +234,16 @@ public class GameController extends AbstractProtocolController implements ModelO
 			LOGGER.debug(String.valueOf(sc));
 		}
 		if (sc instanceof GeneralInformation.StatsLook) {
-			return List.of(new SendSpeech(((GeneralInformation.StatsLook) sc).getSerialId(), 0, 0, 0, 0, "maycon", ""));
+			var serialId = ((GeneralInformation.StatsLook) sc).getSerialId();
+			var item = core.findItemByID(serialId);
+			if (item != null) {
+				return List.of(new SendSpeech(item));
+			}
+			var mobile = core.findMobileByID(serialId);
+			if (mobile != null) {
+				return List.of(new SendSpeech(mobile));
+			}
+			return Collections.emptyList();
 		}
 		return Collections.emptyList();
 	}
@@ -246,7 +258,7 @@ public class GameController extends AbstractProtocolController implements ModelO
 			return new ClilocMessage(mobile);
 		} else {
 			Item item = core.findItemByID( lookRequest.getSerialId() );
-			return new ClilocMessage(item);
+			return new SendSpeech(item);
 			// TODO: handle items' stacks too
 		}
 	}
